# yrep-element-analysis

./: .env.example  .gitignore  README.md  analyze_nov5_standards.py  collected_files.txt  penny_analysis.py  penny_comparison.py  penny_full_comparison.py  pyproject.toml  run_coke_can.py  run_decomposition.py  run_dirt.py  run_with_library.py  testgraph.yrep.json  tuned_analysis.py
backend/: __init__.py  main.py
backend/data/: __init__.py
backend/data/references/: __init__.py  aluminum.csv  calcium.csv  copper.csv  iron.csv  lead.csv  magnesium.csv  sodium.csv  zinc.csv
backend/models/: __init__.py  core.py  nodes.py  pipeline.py  presets.py  visualization.py
backend/nodes/: __init__.py  registry.py
backend/routes/: __init__.py  export.py  files.py  nodes.py  pipelines.py  presets.py  references.py  visualizations.py
backend/services/: __init__.py  executor.py
data/ScanningTimeData/10MicroSec/: TenMicroDelayPb_HRD10591_00001.txt  TenMicroDelayPb_HRD10591_00002.txt  TenMicroDelayPb_HRD10591_00003.txt  TenMicroDelayPb_HRD10591_00004.txt  TenMicroDelayPb_HRD10591_00005.txt  TenMicroDelayPb_HRD10591_00006.txt  TenMicroDelayPb_HRD10591_00007.txt  TenMicroDelayPb_HRD10591_00008.txt  TenMicroDelayPb_HRD10591_00009.txt  (+6 more)
data/dirt/: KBrHeat2_HRD10591_00001.txt  KBrHeat2_HRD10591_00002.txt  KBrHeat2_HRD10591_00003.txt  KBrHeat2_HRD10591_00004.txt  KBrHeat2_HRD10591_00010.txt  KBrHeat2_HRD10591_00013.txt  KBrHeat2_HRD10591_00016.txt  KBrHeat2_HRD10591_00017.txt  KBrHeat2_HRD10591_00018.txt  KBrHeat2_HRD10591_00019.txt  READMEKBRHEAT2.txt
data/lists/: findinglist1.csv  findinglist10.csv  findinglist11.csv  findinglist12.csv  findinglist13.csv  findinglist14.csv  findinglist15.csv  findinglist2.csv  findinglist3.csv  findinglist4.csv  findinglist5.csv  findinglist6.csv  findinglist7.csv  findinglist8.csv  findinglist9.csv
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
gui/: main.py
tests/: __init__.py  conftest.py  test_files.py  test_nodes.py  test_pipelines.py  test_presets.py  test_references.py  test_visualizations.py
yrep-gui/: AGENT_FRAMEWORK.md  GUI_ARCHITECTURE.md  README.md  main.py  pyproject.toml
yrep-gui/yrep_gui/: __init__.py  app.py
yrep-gui/yrep_gui/nodes/: registry.py
yrep-gui/yrep_gui/services/: agent_runner.py  pipeline_runner.py
yrep-gui/yrep_gui/templates/: __init__.py
yrep-gui/yrep_gui/ui/: inspector.py  main_window.py  node_editor.py  node_item.py  welcome.py  workflow_dialog.py
yrep-spectrum-analysis/: README.md  pyproject.toml
yrep-spectrum-analysis/src/yrep_spectrum_analysis/: __init__.py  _detect.py  _preprocess.py  _templates.py  _visualize.py  api.py  types.py  utils.py
yrep-spectrum-analysis/src/yrep_spectrum_analysis/pipeline/: __init__.py  decomposition.py  stages.py
yrep-spectrum-analysis/src/yrep_spectrum_analysis/visualizations/: __init__.py  detection.py  preprocessing.py  templates.py
(+11150 files in other folders)
