[project]
name = "analysis"
version = "0.1.0"
description = "Data analysis for the YREP project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yrep-spectrum-analysis",
    "fastapi>=0.109.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.27.0",
]

[tool.uv.workspace]
members = [
    "yrep-spectrum-analysis",
    ".",
    "yrep-gui",
]

[tool.uv.sources]
yrep-spectrum-analysis = { workspace = true }
yrep-gui = { workspace = true }
