[project]
name = "analysis"
version = "0.1.0"
description = "Data analysis for the YREP project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yrep-spectrum-analysis",
    "fastapi>=0.109.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.uv.workspace]
members = [
    "yrep-spectrum-analysis",
    ".",
    "yrep-gui",
]

[tool.uv.sources]
yrep-spectrum-analysis = { workspace = true }
yrep-gui = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
