[project]
name = "yrep-spectrum-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "scipy",
  "pybaselines",
  "scikit-learn",
  "statsmodels",
  "scikit-image",
  "pandas",
  "matplotlib",
  "seaborn",
  "pymcr",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
